--- a/_config.yml
+++ b/_config.yml
@@ -2,29 +2,29 @@
 
 # GENERAL SITE SETTINGS
 # title: This will be displayed as the website's name in your browser tab.
-title: Neumorphism
+title: I'm starstone,an undergraduate student in Zhejiang University.
 # description: This will be meta HTML tag content. This can be ignored.
-description: Personal website powered by Jekyll
+description: I'm trying to build a personal website.
 # baseurl: The subpath of your site
 # > set this to "", if you renamed the repository to <user>.github.io
-baseurl: "/neumorphism"
+baseurl: ""
 
 # LANDING PAGE
 # username: This will displayed on the landing page as your name.
-username: Neumorphism
+username: Starstone
 # typing_text: This will be typed before 'scroll down for more'.
 # > set this to your job title, e.g. Fullstack Developer
 typing_text: Jekyll Theme
 # email: Your E-Mail address for the email button.
-email: email@example.com
+email: pxxhello@gmail.com
 # For every social button you want to display, set your username or userid
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
-github_username: longpdo
-codepen_username: exampleUser
-dev_username: exampleUser
-linkedin_username: exampleUser
-twitter_username: exampleUser
+github_username: starstone3
+# codepen_username: exampleUser
+# dev_username: exampleUser
+# linkedin_username: exampleUser
+# twitter_username: exampleUser
 
 # ABOUT ME SECTION
 # show_aboutme_card:
